# CreationEngineRaytracing

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: AddCXXFiles.cmake  Module.cmake  NVRHI.cmake  XSEPlugin.cmake  nvapi.cmake
include/: Model.h  PCH.h  ShaderUtils.h  State.h  magic_enum_spec.h
interop/: CameraData.hlsli  Instance.hlsli  Interop.h  Material.hlsli  MaterialSkyrim.hlsli  Mesh.hlsli  SharedData.hlsli  Vertex.hlsli  byte4.hlsli  ubyte4.hlsli
shaders/: GBufferRaster.hlsl
shaders/include/: ColorConversions.hlsli  Common.hlsli  Lighting.hlsli  PBR.hlsli  Surface.hlsli  SurfaceMaker.hlsli  SurfaceSkyrim.hlsli
shaders/include/Common/: BRDF.hlsli
shaders/include/Utils/: VanillaToPBR.hlsli
shaders/include/nvapi/: Profiling.hlsli
shaders/raytracing/: RayGeneration.hlsl
shaders/raytracing/GBuffer/: ClosestHit.hlsl  Miss.hlsl  RayGeneration.hlsl  Registers.hlsli
shaders/raytracing/GlobalIllumination/: RayGeneration.hlsl  Registers.hlsli
shaders/raytracing/Pathtracing/: AnyHit.hlsl  RayGeneration.hlsl  Registers.hlsli
shaders/raytracing/include/: AdvancedSettings.hlsli  Common.hlsli  Geometry.hlsli  MonteCarlo.hlsli  Rays.hlsli  Registers.hlsli  Transparency.hlsli
shaders/raytracing/include/Materials/: BSDF.hlsli
src/: API.cpp  API.h  Constants.h  Hooks.cpp  Hooks.h  Model.cpp  Module.cpp  PCH.cpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  ShaderUtils.cpp  ShaderUtils.h  State.cpp  Util.cpp  Util.h
src/Core/: Instance.cpp  Material.h  Texture.h
src/Pass/: GIComposite.cpp  GIComposite.h  RTDI.cpp  RTDI.h  RaytracedGI.cpp  RaytracedGI.h  RaytracingPass.cpp  RaytracingPass.h  RenderPass.h
src/Pass/Raster/: GBuffer.cpp  GBuffer.h
src/Pass/Raytracing/: GBuffer.cpp  GBuffer.h  GlobalIllumination.cpp  GlobalIllumination.h  PathTracing.cpp  PathTracing.h
src/Pass/Raytracing/Common/: LightTLAS.cpp  LightTLAS.h  SHaRC.cpp  SHaRC.h  SceneTLAS.cpp  SceneTLAS.h
src/Passes/: PathTracing.cpp  RaytracingCommon.cpp  RaytracingPass.cpp  RaytracingPass.h  ScreenPass.h
src/Passes/Raster/: GBuffer.cpp  GBuffer.h
src/Renderer/: IRenderNode.h  RenderGraph.cpp  RenderGraph.h  RenderNode.cpp  RenderNode.h  RootRenderNode.cpp  RootRenderNode.h
src/Types/: BindlessLayout.h  BindlessTable.h  RendererParams.h  Settings.h  ShaderDefine.h  TextureReference.h
src/Types/CommunityShaders/: BSLightingShaderMaterialPBR.h  BSLightingShaderMaterialPBRLandscape.h
src/Utils/: Geometry.cpp  Material.cpp  Material.h  Shader.cpp  Shader.h  Traversal.h
src/core/: Buffer.h  Instance.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/framework/: DescriptorTableManager.cpp  DescriptorTableManager.h
